add train generator

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ bottleneck/validation/*
 output/best-weights*
 dataset_prediction/crops/*
 fashion_data/*
-tensorflow121_py27_gpu/bin/*
+tensorflow121_py27_gpu/*
