--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,9 @@ selectivesearch>=0.3
 six>=1.10.0
 sklearn>=0.0
 subprocess32>=3.2.7
-tensorflow-gpu>=1.2.1
+tensorflow-gpu>=1.5.0, <=1.9.9 
 Theano>=0.9.0
 virtualenv>=15.0.1
 Werkzeug>=0.12.2
+colored-traceback == 0.3.0
+jupyter
